# factors

./: .coverage  .gitignore  .pypirc  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  TODO.rst  __init__.py  appveyor.yml  codeship-services.yml  codeship-steps.yml  pyproject.toml  requirements.txt  settings.py  setup.cfg  setup.py  testresults.xlsx  tox.ini
.ci/: packages.conda  parallel.py
.pytest_cache/v/cache/: lastfailed  nodeids
data/: lifedb.xls
factors/: __init__.py  __main__.py  factors.py  models.py  newcode.py  settings.py  utils.py  utils_extra.py
factors/data/: AEG2011.xlsx  AG0409.xlsx  AG1262.xlsx  AG2014.xlsx  AG2016.xlsx  AG2018.xlsx  AG2020.xlsx  AG2022.xlsx  COL2003.xlsx  GB0005WO.xlsx  GB1015WO.xlsx  NN2013.xlsx  ZL2007.xlsx  ZL2011.xlsx  lifedb.xls  lifedb_HenkBets.xls  tables.csv
factors/examples/: __init__.py
factors/tests/: conftest.py  test_factors.py  test_new_factors.py  test_utils.py
tests/: factors_tests.py
